@@ -1,12 +1,15 @@
 package edu.hw4;
 
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
+import edu.hw4.Animal.Animal;
+import edu.hw4.Animal.NullAnimalException;
+import edu.hw4.Animal.NullAnimalListException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
-import static edu.hw4.Task12.getCntWeightMoreHeightAnimal;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
+import static edu.hw4.Task1_18.Task1To18.getCntWeightMoreHeightAnimal;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
@@ -15,7 +18,7 @@ public class Task12Test {
         return Stream.of(
             Arguments.of(List.of(), 0),
             Arguments.of(
-                Arrays.asList(
+                List.of(
                     new Animal("a", Animal.Type.CAT, Animal.Sex.M, 12, 13, 100, true),
                     new Animal("b", Animal.Type.CAT, Animal.Sex.M, 12, 13, 100, true)
                 ),
@@ -59,7 +62,7 @@ public class Task12Test {
 
     @ParameterizedTest
     @MethodSource("provideDataForExceptionTest")
-    void getCntWeightMoreHeightExceptionTest(List<Animal> animals, Class exceptedException) {
+    void getCntWeightMoreHeightExceptionTest(List<Animal> animals, Class<Exception> exceptedException) {
 
         assertThrows(exceptedException, () -> getCntWeightMoreHeightAnimal(animals));
     }
