@@ -1,13 +1,15 @@
 package edu.hw4;
 
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
+import edu.hw4.Animal.Animal;
+import edu.hw4.Animal.NullAnimalException;
+import edu.hw4.Animal.NullAnimalListException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
-import static edu.hw4.Task13.getNameMoreTwoWordsAnimals;
-import static edu.hw4.Task14.hasDogWithHeightMoreK;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
+import static edu.hw4.Task1_18.Task1To18.hasDogWithHeightMoreK;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
@@ -16,13 +18,13 @@ public class Task14Test {
         return Stream.of(
             Arguments.of(List.of(), 1, false),
             Arguments.of(
-                Arrays.asList(
+                List.of(
                     new Animal("aa ff ff", Animal.Type.CAT, Animal.Sex.M, 12, 130, 100, true),
                     new Animal("b", Animal.Type.DOG, Animal.Sex.M, 12, 13, 100, true)
                 ), 100, false
             ),
             Arguments.of(
-                Arrays.asList(
+                List.of(
                     new Animal("null", Animal.Type.CAT, Animal.Sex.M, 12, 13, 100, true),
                     new Animal("b", Animal.Type.DOG, Animal.Sex.M, 12, 13, 100, true)
                 ), 10, true
@@ -65,7 +67,7 @@ public class Task14Test {
 
     @ParameterizedTest
     @MethodSource("provideDataForExceptionTest")
-    void hasDogWithHeightMoreKExceptionTest(List<Animal> animals, Class exceptedException) {
+    void hasDogWithHeightMoreKExceptionTest(List<Animal> animals, Class<Exception> exceptedException) {
         assertThrows(exceptedException, () -> hasDogWithHeightMoreK(animals, 0));
     }
 
