@@ -1,13 +1,15 @@
 package edu.hw4;
 
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
+import edu.hw4.Animal.Animal;
+import edu.hw4.Animal.NullAnimalException;
+import edu.hw4.Animal.NullAnimalListException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
-
-import static edu.hw4.Task16.sortByTypeSexNameAnimals;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
+import static edu.hw4.Task1_18.Task1To18.sortByTypeSexNameAnimals;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
@@ -16,21 +18,21 @@ public class Task16Test {
         return Stream.of(
             Arguments.of(List.of(), List.of()),
             Arguments.of(
-                Arrays.asList(
+                List.of(
                     new Animal("aa ff ff", Animal.Type.CAT, Animal.Sex.M, 10, 130, 100, true),
                     new Animal("b", Animal.Type.DOG, Animal.Sex.M, 12, 13, 100, true)
                 ),
-                Arrays.asList(
+                List.of(
                     new Animal("aa ff ff", Animal.Type.CAT, Animal.Sex.M, 10, 130, 100, true),
                     new Animal("b", Animal.Type.DOG, Animal.Sex.M, 12, 13, 100, true)
                 )
             ),
             Arguments.of(
-                Arrays.asList(
+                List.of(
                     new Animal("null", Animal.Type.CAT, Animal.Sex.M, 12, 13, 100, true),
                     new Animal("b", Animal.Type.DOG, Animal.Sex.M, 12, 13, 100, true)
                 ),
-                Arrays.asList(
+                List.of(
                     new Animal("null", Animal.Type.CAT, Animal.Sex.M, 12, 13, 100, true),
                     new Animal("b", Animal.Type.DOG, Animal.Sex.M, 12, 13, 100, true)
                 )
@@ -84,7 +86,7 @@ public class Task16Test {
 
     @ParameterizedTest
     @MethodSource("provideDataForExceptionTest")
-    void gsortByTypeSexNameExceptionTest(List<Animal> animals, Class exceptedException) {
+    void gsortByTypeSexNameExceptionTest(List<Animal> animals, Class<Exception> exceptedException) {
         assertThrows(exceptedException, () -> sortByTypeSexNameAnimals(animals));
     }
 
