@@ -1,12 +1,15 @@
 package edu.hw4;
 
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
+import edu.hw4.Animal.Animal;
+import edu.hw4.Animal.NullAnimalException;
+import edu.hw4.Animal.NullAnimalListException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
-import static edu.hw4.Task1.sortAnimalsByHeight;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
+import static edu.hw4.Task1_18.Task1To18.sortAnimalsByHeight;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
@@ -16,11 +19,11 @@ public class Task1Test {
         return Stream.of(
             Arguments.of(List.of(), List.of()),
             Arguments.of(
-                Arrays.asList(
+                List.of(
                     new Animal("a", Animal.Type.CAT, Animal.Sex.M, 12, 10, 1, true),
                     new Animal("b", Animal.Type.CAT, Animal.Sex.M, 12, 10, 1, true)
                 ),
-                Arrays.asList(
+                List.of(
                     new Animal("a", Animal.Type.CAT, Animal.Sex.M, 12, 10, 1, true),
                     new Animal("b", Animal.Type.CAT, Animal.Sex.M, 12, 10, 1, true)
                 )
@@ -71,7 +74,7 @@ public class Task1Test {
 
     @ParameterizedTest
     @MethodSource("provideDataForExceptionTest")
-    void sortAnimalsByHeightExceptionTest(List<Animal> animals, Class exceptedException) {
+    void sortAnimalsByHeightExceptionTest(List<Animal> animals, Class<Exception> exceptedException) {
         assertThrows(exceptedException, () -> sortAnimalsByHeight(animals));
     }
 
