@@ -1,12 +1,15 @@
 package edu.hw4;
 
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
+import edu.hw4.Animal.Animal;
+import edu.hw4.Animal.NullAnimalException;
+import edu.hw4.Animal.NullAnimalListException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
-import static edu.hw4.Task2.sortAnimalsByWeight;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
+import static edu.hw4.Task1_18.Task1To18.sortAnimalsByWeight;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
@@ -15,11 +18,11 @@ public class Task2Test {
         return Stream.of(
             Arguments.of(List.of(), List.of()),
             Arguments.of(
-                Arrays.asList(
+                List.of(
                     new Animal("a", Animal.Type.CAT, Animal.Sex.M, 12, 13, 100, true),
                     new Animal("b", Animal.Type.CAT, Animal.Sex.M, 12, 13, 100, true)
                 ),
-                Arrays.asList(
+                List.of(
                     new Animal("a", Animal.Type.CAT, Animal.Sex.M, 12, 13, 100, true),
                     new Animal("b", Animal.Type.CAT, Animal.Sex.M, 12, 13, 100, true)
                 )
@@ -82,7 +85,7 @@ public class Task2Test {
 
     @ParameterizedTest
     @MethodSource("provideDataForExceptionTest")
-    void sortAnimalsByWeightExceptionTest(List<Animal> animals, Class exceptedException) {
+    void sortAnimalsByWeightExceptionTest(List<Animal> animals, Class<Exception> exceptedException) {
         int k = 5;
         assertThrows(exceptedException, () -> sortAnimalsByWeight(animals, k));
     }
