@@ -1,12 +1,15 @@
 package edu.hw4;
 
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
+import edu.hw4.Animal.Animal;
+import edu.hw4.Animal.NullAnimalException;
+import edu.hw4.Animal.NullAnimalListException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
-import static edu.hw4.Task5.getMaxSexAnimal;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
+import static edu.hw4.Task1_18.Task1To18.getMaxSexAnimal;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
@@ -17,12 +20,12 @@ public class Task5Test {
             Arguments.of(
                 List.of(), "equals"
             ),
-            Arguments.of(Arrays.asList(
+            Arguments.of(List.of(
                 new Animal("a", Animal.Type.CAT, null, 12, 13, 100, true),
                 new Animal("b", Animal.Type.DOG, null, 12, 13, 100, true)
             ), "equals"),
             Arguments.of(
-                Arrays.asList(
+                List.of(
                     new Animal("aa", Animal.Type.CAT, Animal.Sex.F, 12, 13, 100, true),
                     new Animal("bdjfjdjfj", Animal.Type.CAT, Animal.Sex.F, 12, 13, 100, true)
                 ),
@@ -30,7 +33,7 @@ public class Task5Test {
             ),
 
             Arguments.of(
-                Arrays.asList(
+                List.of(
                     new Animal("a", Animal.Type.CAT, null, 12, 13, 100, true),
                     new Animal("b", Animal.Type.DOG, Animal.Sex.M, 12, 13, 100, true)
                 ),
@@ -74,7 +77,7 @@ public class Task5Test {
 
     @ParameterizedTest
     @MethodSource("provideDataForExceptionTest")
-    void maxSexAnimalExceptionTest(List<Animal> animals, Class excepted) {
+    void maxSexAnimalExceptionTest(List<Animal> animals, Class<Exception> excepted) {
         assertThrows(excepted, () -> getMaxSexAnimal(animals));
     }
 
