@@ -1,17 +1,16 @@
 package edu.hw4;
 
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
+import edu.hw4.Animal.Animal;
+import edu.hw4.Animal.NullAnimalException;
+import edu.hw4.Animal.NullAnimalListException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
-
-import static edu.hw4.Task2.sortAnimalsByWeight;
-//import static edu.hw4.Task6.getTypeMaxWeightAnimal;
-import static edu.hw4.Task5.getMaxSexAnimal;
-import static edu.hw4.Task6.getTypeMaxWeightAnimal;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
+import static edu.hw4.Task1_18.Task1To18.getTypeMaxWeightAnimal;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
@@ -20,7 +19,7 @@ public class Task6Test {
         return Stream.of(
             Arguments.of(List.of(), Map.of()),
             Arguments.of(
-                Arrays.asList(
+                List.of(
                     new Animal("a", Animal.Type.CAT, Animal.Sex.M, 12, 13, 100, true),
                     new Animal("b", Animal.Type.DOG, Animal.Sex.M, 12, 13, 150, true)
                 ),
@@ -33,7 +32,7 @@ public class Task6Test {
 
             ),
             Arguments.of(
-                Arrays.asList(
+                List.of(
                     new Animal("a", Animal.Type.CAT, Animal.Sex.M, 12, 13, 100, true),
                     new Animal("b", null, Animal.Sex.M, 12, 13, 150, true)
                 ),
@@ -76,7 +75,7 @@ public class Task6Test {
 
     @ParameterizedTest
     @MethodSource("provideDataForTest")
-    void getTypeMaxWeightTest(List<Animal> animals, Map excepted)
+    void getTypeMaxWeightTest(List<Animal> animals, Map<Animal.Type, Animal> excepted)
         throws NullAnimalListException, NullAnimalException {
         assertThat(getTypeMaxWeightAnimal(animals)).isEqualTo(excepted);
     }
@@ -94,7 +93,7 @@ public class Task6Test {
 
     @ParameterizedTest
     @MethodSource("provideDataForExceptionTest")
-    void getTypeMaxWeightExceptionTest(List<Animal> animals, Class excepted) {
+    void getTypeMaxWeightExceptionTest(List<Animal> animals, Class<Exception> excepted) {
         assertThrows(excepted, () -> getTypeMaxWeightAnimal(animals));
     }
 
