@@ -1,12 +1,16 @@
 package edu.hw4;
 
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
+import edu.hw4.Animal.Animal;
+import edu.hw4.Animal.NotFoundAnimalException;
+import edu.hw4.Animal.NullAnimalException;
+import edu.hw4.Animal.NullAnimalListException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
-import static edu.hw4.Task7.getKOldestAnimal;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
+import static edu.hw4.Task1_18.Task1To18.getKOldestAnimal;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
@@ -18,11 +22,11 @@ public class Task7Test {
                 List.of(new Animal("a", Animal.Type.CAT, Animal.Sex.M, 12, 10, 1, true))
             ),
             Arguments.of(
-                Arrays.asList(
+                List.of(
                     new Animal("a", Animal.Type.CAT, Animal.Sex.M, 12, 13, 100, true),
                     new Animal("b", Animal.Type.DOG, Animal.Sex.M, 14, 13, 150, true)
                 ),
-                Arrays.asList(
+                List.of(
                     new Animal("b", Animal.Type.DOG, Animal.Sex.M, 14, 13, 150, true),
                     new Animal("a", Animal.Type.CAT, Animal.Sex.M, 12, 13, 100, true)
                 )
@@ -67,7 +71,7 @@ public class Task7Test {
 
     @ParameterizedTest
     @MethodSource("provideDataForTest")
-    void getOldestAnimalIncorrectKTest(List<Animal> animals, List<Animal> excepted) {
+    void getOldestAnimalIncorrectKTest(List<Animal> animals) {
         assertThrows(NotFoundAnimalException.class, () -> getKOldestAnimal(animals, 0));
         assertThrows(NotFoundAnimalException.class, () -> getKOldestAnimal(animals, animals.size() + 1));
 
@@ -75,7 +79,7 @@ public class Task7Test {
 
     @ParameterizedTest
     @MethodSource("provideDataForExceptionTest")
-    void ggetKOldestExceptionTest(List<Animal> animals, Class excepted) {
+    void ggetKOldestExceptionTest(List<Animal> animals, Class<Exception> excepted) {
         int k = 5;
         assertThrows(excepted, () -> getKOldestAnimal(animals, k));
     }
